--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -8,13 +8,13 @@
  
 		<p:menubar>
 			<p:menuitem value="Home" icon="ui-icon-home" />
-			<p:menuitem value="Cadastro" icon="ui-icon-document" />
-			<p:menuitem value="Consulta" icon="ui-icon-document" />
-			<p:menuitem value="Consulta por Carousel" icon="ui-icon-document" />
-			<p:menuitem value="Gráfico tipo Pessoa" icon="ui-icon-document" />
-			<p:menuitem value="Exportar XML Pessoa" icon="ui-icon-document" />
+			<p:menuitem value="Vagas" icon="ui-icon-document" />
+			<p:menuitem value="Eventos" icon="ui-icon-document" />
+			<p:menuitem value="Doações" icon="ui-icon-document" />
  
- 
+		<f:facet name="options">            
+            	        <p:commandButton value="Cadastrar" icon="ui-icon-extlink"/>
+        	</f:facet>	
 		<f:facet name="options">            
             	        <p:commandButton value="Logout" icon="ui-icon-extlink"/>
         	</f:facet>
