Tela inicial mais tela de login

--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -13,7 +13,7 @@
 			<p:menuitem value="Doações" icon="ui-icon-document" />
  
 		<f:facet name="options">            
-            	        <p:commandButton value="Logout" icon="ui-icon-extlink"/>
+            	        <p:commandButton value="Logout" icon="ui-icon-extlink" action="#{usuarioController.Logout}"/>
         	</f:facet>
 		</p:menubar>
  
