--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -5,6 +5,7 @@
 	xmlns:p="http://primefaces.org/ui">
  
 	<h:form>
+ 	<img src="resources/imagens/header.jpg" width="100%" alt="header"></img>
  
 		<p:menubar>
 			<p:menuitem value="Home" icon="ui-icon-home" />
