--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -5,11 +5,12 @@
 	xmlns:p="http://primefaces.org/ui">
  
 	<h:form>
- 	<img src="resources/imagens/header.jpg" width="100%" alt="header"></img>
+ 	<p:graphicImage url="/resources/imagens/banner.jpg" />
  
 		<p:menubar>
 			<p:menuitem value="Home" icon="ui-icon-home" />
 			<p:menuitem value="Vagas" icon="ui-icon-document" />
+			<p:menuitem value="Serviços" icon="ui-icon-document" />
 			<p:menuitem value="Eventos" icon="ui-icon-document" />
 			<p:menuitem value="Doações" icon="ui-icon-document" />
  
