--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -10,22 +10,20 @@ body {
    height:100%;   
 }
 #content {
- 
-   min-height:93%;
    position:relative;
 }
 #header {
    padding:0px;
+      width:100%;
 }
 #body {
- 
    padding:10px;
-   padding-bottom:60px;
+      width:100%;
 }
 #footer {
    position:absolute;
    bottom:0;
    width:100%;
-   height:20px;  
+   height:0.1%;  
    background:#BDBDBD;
 }
