--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -7,10 +7,9 @@
 	<h:form>
  	<p:graphicImage url="/resources/imagens/banner.jpg" />
  
-		<p:menubar>
+		<p:menubar style = "background :	#AFEEEE;">
 			<p:menuitem value="Home" icon="ui-icon-home" />
 			<p:menuitem value="Vagas" icon="ui-icon-document" />
-			<p:menuitem value="Serviços" icon="ui-icon-document" />
 			<p:menuitem value="Eventos" icon="ui-icon-document" />
 			<p:menuitem value="Doações" icon="ui-icon-document" />
  
