--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -21,7 +21,7 @@ body {
       width:100%;
 }
 #footer {
-   position:absolute;
+   position:relative;
    bottom:0;
    width:100%;
    height:0.1%;  
