--- a/src/main/webapp/template/footer.xhtml
+++ b/src/main/webapp/template/footer.xhtml
@@ -1,7 +1,8 @@
 <html>
-<body>
-<div style="text-align: center;">
-
+<body >
+<div style="text-align: center ;">
+	<h5>HelpTheNext - Plataforma WEB Para Servicos Voluntarios</h5>
+	<h5>Desenvolvedora: Ana Luisa Bavati     -    Email: ana_bavati@hotmail.com </h5>
 </div>
 </body>
 </html>
