--- a/src/main/webapp/template/layoutBaseIndex.xhtml
+++ b/src/main/webapp/template/layoutBaseIndex.xhtml
@@ -1,23 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:h="http://java.sun.com/jsf/html">
 
-<h:head>
-	<h:outputStylesheet library="css" name="default.css" />
-</h:head>
+<body>
 
-<h:body>
 	<h:head>
 		<h:outputStylesheet library="css" name="default.css" />
 	</h:head>
 
 	<div id="header">
-		<ui:include src="/template/headerInicial.xhtml" />
+		<ui:include src="headerInicial.xhtml" />
 	</div>
 
 	<div id="content" style="margin-top: 5%;">
@@ -26,8 +20,8 @@
 	</div>
 
 	<div id="footer">
-		<ui:include src="/template/footer.xhtml" />
+		<ui:include src="footer.xhtml" />
 	</div>
-		
-</h:body>
+	
+</body>
 </html>
