Telas de cadastro

--- a/src/main/webapp/template/headerInicial.xhtml
+++ b/src/main/webapp/template/headerInicial.xhtml
@@ -8,7 +8,7 @@
 
 	<p:growl id="growl-mensagem" showDetail="true" sticky="true" />
 
-	<h:panelGrid columns="8" cellpadding="1">
+	<h:panelGrid columns="8" cellpadding="1" style="  text-align: left;">
 		<p:graphicImage url="/resources/imagens/banner.jpg" />
 
 		<p:outputLabel value="Login" />
@@ -28,7 +28,7 @@
 	<p:menubar style="background :	#AFEEEE;">
 		<p:menuitem value="Sobre Nós" icon="ui-icon-home" />
 		<p:menuitem value="Cadastrar Voluntario" icon="ui-icon-document" url="cadastrarVoluntario.xhtml" />
-		<p:menuitem value="Cadastrar ONG" icon="ui-icon-document" />
+		<p:menuitem value="Cadastrar ONG" icon="ui-icon-document" url="cadastrarONG.xhtml" />
 	</p:menubar>
 
 </h:form>
