--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -3,21 +3,25 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
- 
-	<h:form>
- 	<p:graphicImage url="/resources/imagens/banner.jpg" />
- 
-		<p:menubar style = "background :	#AFEEEE;">
-			<p:menuitem value="Home" icon="ui-icon-home" />
-			<p:menuitem value="Vagas" icon="ui-icon-document" />
-			<p:menuitem value="Eventos" icon="ui-icon-document" />
-			<p:menuitem value="Doações" icon="ui-icon-document" />
- 
-		<f:facet name="options">            
-            	        <p:commandButton value="Logout" icon="ui-icon-extlink" action="#{usuarioController.Logout}"/>
-        	</f:facet>
-		</p:menubar>
- 
-	</h:form>
- 
+
+<h:form>
+	<p:graphicImage url="/resources/imagens/banner.jpg" />
+
+	<p:menubar style="background :	#AFEEEE;">
+		<p:menuitem value="Home" icon="ui-icon-home" />
+		<p:submenu label="Vagas" icon="ui-icon-pencil">
+			<p:menuitem value="Cadastrar Nova Vaga" url="cadastrarVaga.xhtml" icon="ui-icon-pencil" />
+			<p:menuitem value="Visualizar Vagas" url="#" icon="ui-icon-document" />
+		</p:submenu>
+		<p:menuitem value="Eventos" icon="ui-icon-document" />
+		<p:menuitem value="Doações" icon="ui-icon-document" />
+
+		<f:facet name="options">
+			<p:commandButton value="Logout" icon="ui-icon-extlink"
+				action="#{usuarioController.Logout}" />
+		</f:facet>
+	</p:menubar>
+
+</h:form>
+
 </html>
