Adicionando cadastro de eventos e doações

--- a/src/main/webapp/template/footer.xhtml
+++ b/src/main/webapp/template/footer.xhtml
@@ -2,7 +2,7 @@
 <body >
 <div style="text-align: center ;">
 	<h5>HelpTheNext - Plataforma WEB Para Servicos Voluntarios</h5>
-	<h5>Desenvolvedora: Ana Luisa Bavati     -    Email: ana_bavati@hotmail.com </h5>
+	<h5> Email: ana_bavati@hotmail.com </h5>
 </div>
 </body>
 </html>
