--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -7,29 +7,38 @@
 <h:form>
 	<h:panelGrid columns="2" cellpadding="1">
 		<p:graphicImage url="/resources/imagens/banner.jpg" />
-
-		<p:menubar>
-		<p:submenu label="Minha Conta" >
-			<p:menuitem value="Editar Cadastro" url="cadastrarVaga.xhtml" icon="ui-icon-pencil" />
-		</p:submenu>
-		</p:menubar>
-		
-
 	</h:panelGrid>
 
 	<p:menubar style="background :	#AFEEEE;">
-		<p:menuitem value="Home" icon="ui-icon-home"  url="home.xhtml" />
+		<p:menuitem value="Home" icon="ui-icon-home" url="home.xhtml" />
 		<p:submenu label="Vagas" icon="ui-icon-pencil">
-			<p:menuitem value="Cadastrar Nova Vaga" url="cadastrarVaga.xhtml" icon="ui-icon-pencil" />
+			<p:menuitem value="Cadastrar Vaga" url="cadastrarVaga.xhtml"
+				icon="ui-icon-pencil" />
 			<p:menuitem value="Visualizar Vagas" url="#" icon="ui-icon-document" />
 		</p:submenu>
-		<p:menuitem value="Eventos" icon="ui-icon-document" />
-		<p:menuitem value="Doações" icon="ui-icon-document" />
+		<p:submenu label="Eventos" icon="ui-icon-document">
+			<p:menuitem value="Cadastrar Evento" url="cadastrarEvento.xhtml"
+				icon="ui-icon-pencil" />
+			<p:menuitem value="Visualizar Evento(s)" url="#"
+				icon="ui-icon-document" />
+		</p:submenu>
+		<p:submenu label="Doações" icon="ui-icon-document">
+			<p:menuitem value="Cadastrar Doação" url="cadastrarDoacao.xhtml"
+				icon="ui-icon-pencil" />
+			<p:menuitem value="Visualizar Doações" url="#"
+				icon="ui-icon-document" />
+		</p:submenu>
 
-		<f:facet name="options">
-			<p:commandButton value="Logout" icon="ui-icon-extlink"
+		<p:submenu label="Minha Conta" icon="ui-icon-pencil"
+			sytle="margin-right: 5%">
+			<p:menuitem value="Editar Cadastro" url="cadastrarVaga.xhtml"
+				icon="ui-icon-pencil" />
+			<p:menuitem value="Logout" icon="ui-icon-extlink"
 				action="#{usuarioController.Logout}" />
-		</f:facet>
+		</p:submenu>
+
+
+
 	</p:menubar>
 
 </h:form>
