Exibindo vagas cadastradas

--- a/src/main/webapp/template/ONG/header.xhtml
+++ b/src/main/webapp/template/ONG/header.xhtml
@@ -14,7 +14,7 @@
 		<p:submenu label="Vagas" icon="ui-icon-pencil">
 			<p:menuitem value="Cadastrar Vaga" url="cadastrarVaga.xhtml"
 				icon="ui-icon-pencil" />
-			<p:menuitem value="Visualizar Vagas" url="#" icon="ui-icon-document" />
+			<p:menuitem value="Visualizar Vagas" url="visualizarVagas.xhtml" icon="ui-icon-document" />
 		</p:submenu>
 		
 		<p:submenu label="Eventos" icon="ui-icon-document">
