Visualizar eventos cadastrados e estruturas sobre funcionalidade doações

--- a/src/main/webapp/template/ONG/header.xhtml
+++ b/src/main/webapp/template/ONG/header.xhtml
@@ -14,13 +14,13 @@
 		<p:submenu label="Vagas" icon="ui-icon-pencil">
 			<p:menuitem value="Cadastrar Vaga" url="cadastrarVaga.xhtml"
 				icon="ui-icon-pencil" />
-			<p:menuitem value="Visualizar Vagas" url="visualizarVagas.xhtml" icon="ui-icon-document" />
+			<p:menuitem value="Visualizar Vaga(s)" url="visualizarVagas.xhtml" icon="ui-icon-document" />
 		</p:submenu>
 		
 		<p:submenu label="Eventos" icon="ui-icon-document">
 			<p:menuitem value="Cadastrar Evento" url="cadastrarEvento.xhtml"
 				icon="ui-icon-pencil" />
-			<p:menuitem value="Visualizar Evento(s)" url="#"
+			<p:menuitem value="Visualizar Evento(s)" url="visualizarEventos.xhtml"
 				icon="ui-icon-document" />
 		</p:submenu>
 		
