--- a/src/main/webapp/template/Voluntario/header.xhtml
+++ b/src/main/webapp/template/Voluntario/header.xhtml
@@ -12,7 +12,7 @@
 	<p:menubar style="background :	#AFEEEE;">
 		<p:menuitem value="Home" icon="ui-icon-home" url="home.xhtml" />
 		<p:submenu label="Vagas" icon="ui-icon-pencil">
-			<p:menuitem value="Visualizar Vagas" url="#" icon="ui-icon-document" />
+			<p:menuitem value="Visualizar Vaga(s)" url="#" icon="ui-icon-document" />
 		</p:submenu>
 		
 		<p:submenu label="Eventos" icon="ui-icon-document">
