--- a/src/main/webapp/template/Voluntario/header.xhtml
+++ b/src/main/webapp/template/Voluntario/header.xhtml
@@ -6,10 +6,10 @@
 
 <h:form>
 	<h:panelGrid columns="2" cellpadding="1">
-		<p:graphicImage url="/resources/imagens/banner.jpg" />
+		<p:graphicImage url="/resources/imagens/logoBanner.png" width="80%" height="125" />
 	</h:panelGrid>
 
-	<p:menubar style="background :	#AFEEEE;">
+	<p:menubar style="background :	#D6DDE7;">
 		<p:menuitem value="Home" icon="ui-icon-home" url="home.xhtml" />
 		<p:submenu label="Vagas" icon="ui-icon-pencil">
 			<p:menuitem value="Visualizar Vaga(s)" url="#" icon="ui-icon-document" />
