--- a/src/main/webapp/template/headerInicial.xhtml
+++ b/src/main/webapp/template/headerInicial.xhtml
@@ -8,7 +8,7 @@
 
 	<p:growl id="growl-mensagem" showDetail="true" sticky="true" />
 	<h:panelGrid columns="8" cellpadding="1">
-		<p:graphicImage url="/resources/imagens/banner.jpg" />
+		<p:graphicImage url="/resources/imagens/logoBanner.png" width="80%" height="125" />
 
 		<p:outputLabel value="Login" />
 					<p:inputText id="inputText-login"
@@ -23,7 +23,7 @@
 							update="growl-mensagem" />
 	</h:panelGrid>
 
-	<p:menubar style="background :	#AFEEEE;">
+	<p:menubar style="background :	#D6DDE7;">
 		<p:menuitem value="Sobre Nós" icon="ui-icon-home" url="index.xhtml" />
 		<p:menuitem value="Cadastrar Voluntario" icon="ui-icon-document" url="cadastrarVoluntario.xhtml" />
 		<p:menuitem value="Cadastrar ONG" icon="ui-icon-document" url="cadastrarONG.xhtml" />
