Adicionando todas as telas à ambos usuarios

--- a/src/main/webapp/template/Voluntario/header.xhtml
+++ b/src/main/webapp/template/Voluntario/header.xhtml
@@ -12,26 +12,26 @@
 	<p:menubar style="background :	#D6DDE7;">
 		<p:menuitem value="Home" icon="ui-icon-home" url="home.xhtml" />
 		<p:submenu label="Vagas" icon="ui-icon-pencil">
-			<p:menuitem value="Visualizar Vaga(s)" url="#" icon="ui-icon-document" />
+			<p:menuitem value="Visualizar Vaga(s)" url="visualizarVagas.xhtml" icon="ui-icon-document" />
 		</p:submenu>
 		
 		<p:submenu label="Eventos" icon="ui-icon-document">
 			<p:menuitem value="Cadastrar Evento" url="cadastrarEvento.xhtml"
 				icon="ui-icon-pencil" />
-			<p:menuitem value="Visualizar Evento(s)" url="#"
+			<p:menuitem value="Visualizar Evento(s)" url="visualizarEventos.xhtml"
 				icon="ui-icon-document" />
 		</p:submenu>
 		
 		<p:submenu label="Doações" icon="ui-icon-document">
 			<p:menuitem value="Cadastrar Doação" url="cadastrarDoacao.xhtml"
 				icon="ui-icon-pencil" />
-			<p:menuitem value="Visualizar Doações" url="#"
+			<p:menuitem value="Visualizar Doações" url="visualizarDoacoes.xhtml"
 				icon="ui-icon-document" />
 		</p:submenu>
 
 		<p:submenu label="Minha Conta" icon="ui-icon-pencil"
 			sytle="margin-right: 5%">
-			<p:menuitem value="Editar Cadastro" url="cadastrarVaga.xhtml"
+			<p:menuitem value="Editar Cadastro" url="editarVoluntario.xhtml"
 				icon="ui-icon-pencil" />
 			<p:menuitem value="Logout" icon="ui-icon-extlink"
 				action="#{usuarioController.Logout}" />
