--- a/src/main/webapp/template/ONG/header.xhtml
+++ b/src/main/webapp/template/ONG/header.xhtml
@@ -25,7 +25,7 @@
 		</p:submenu>
 		
 		<p:submenu label="Doações" icon="ui-icon-document">
-			<p:menuitem value="Visualizar Doações" url="#"
+			<p:menuitem value="Visualizar Doações" url="visualizarDoacoes.xhtml"
 				icon="ui-icon-document" />
 		</p:submenu>
 
