Telas para editar

--- a/src/main/webapp/template/ONG/header.xhtml
+++ b/src/main/webapp/template/ONG/header.xhtml
@@ -31,7 +31,7 @@
 
 		<p:submenu label="Minha Conta" icon="ui-icon-pencil"
 			sytle="margin-right: 5%">
-			<p:menuitem value="Editar Cadastro" url="cadastrarVaga.xhtml"
+			<p:menuitem value="Editar Cadastro" url="editarONG.xhtml"
 				icon="ui-icon-pencil" />
 			<p:menuitem value="Logout" icon="ui-icon-extlink"
 				action="#{usuarioController.Logout}" />
