--- a/src/main/webapp/template/layoutBaseIndex.xhtml
+++ b/src/main/webapp/template/layoutBaseIndex.xhtml
@@ -8,7 +8,7 @@
 
 	<h:head>
 		<h:outputStylesheet library="css" name="default.css" />
-		<h:outputStylesheet name="webjars/font-awesome/4.4.0/css/font-awesome.css">
+		<h:outputStylesheet name="webjars/font-awesome/4.4.0/css/font-awesome.css" />
 	</h:head>
 
 	<div id="header">
