--- a/src/main/webapp/template/Voluntario/header.xhtml
+++ b/src/main/webapp/template/Voluntario/header.xhtml
@@ -31,7 +31,7 @@
 		</p:submenu>
 
 		<p:submenu label="Minha Conta" icon="fa fa-user-circle"
-			sytle="margin-right: 5%">
+			sytle="margin-right: 5%; float:right">
 			<p:menuitem value="Editar Cadastro" url="editarVoluntario.xhtml"
 				icon="fa fa-pencil-square-o" />
 			<p:menuitem value="Logout" icon="fa fa-sign-out"
