--- a/src/main/webapp/template/footer.xhtml
+++ b/src/main/webapp/template/footer.xhtml
@@ -1,8 +1,18 @@
-<html>
-<body >
-<div style="text-align: center ;">
-	<h5>HelpTheNext - Plataforma WEB Para Servicos Voluntarios</h5>
-	<h5> Email: ana_bavati@hotmail.com </h5>
-</div>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="ahttp://primefaces.org/ui">
+<body>
+	<div style="text-align: center;">
+
+		<div>
+
+			<h4>E-mail: helpthenext.info@gmail.com</h4>
+		</div>
+		<div>Copyright © 2017 helpthenext.com.br. Todos os direitos
+			reservados.</div>
+
+	</div>
 </body>
 </html>
