Corrigindo erros de portugues

--- a/src/main/webapp/template/headerInicial.xhtml
+++ b/src/main/webapp/template/headerInicial.xhtml
@@ -24,8 +24,8 @@
 	</h:panelGrid>
 
 	<p:menubar style="background :#D6DDE7;">
-		<p:menuitem value="Inicio" icon="fa fa-home" url="index.xhtml" />
-		<p:menuitem value="Cadastrar Voluntario" icon="fa fa-plus-square" url="cadastrarVoluntario.xhtml" />
+		<p:menuitem value="Início" icon="fa fa-home" url="index.xhtml" />
+		<p:menuitem value="Cadastrar Voluntário" icon="fa fa-plus-square" url="cadastrarVoluntario.xhtml" />
 		<p:menuitem value="Cadastrar ONG" icon="fa fa-plus-square" url="cadastrarONG.xhtml" />
 	</p:menubar>
 
