Não exibir botoes desabilitados correções gerais

--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -12,21 +12,22 @@
 	<p:menubar style="background :	#D6DDE7;">
 		<p:menuitem value="Home" icon="fa fa-home" url="home.xhtml" />
 		
-		<p:submenu label="Vagas" icon="fa fa-book">
-			<p:menuitem value="Cadastrar Vaga" url="cadastrarVaga.xhtml"
-				icon="fa fa-plus-square" />
-			<p:menuitem value="Visualizar Vagas" url="#" icon="fa fa-file" />
-		</p:submenu>
-		<p:submenu label="Eventos" icon="fa fa-book">
-			<p:menuitem value="Cadastrar Evento" url="cadastrarEvento.xhtml"
-				icon="fa fa-plus-square" />
-			<p:menuitem value="Visualizar Evento(s)" url="#"
+		<p:submenu label="Vagas" icon="fa fa-handshake-o">
+			<p:menuitem value="Visualizar Vaga(s)" url="visualizarVagas.xhtml"
 				icon="fa fa-file" />
 		</p:submenu>
-		<p:submenu label="Doações" icon="fa fa-book">
+
+		<p:submenu label="Eventos" icon="fa fa-glass">
+			<p:menuitem value="Cadastrar Evento" url="cadastrarEvento.xhtml"
+				icon="fa fa-plus-square" />
+			<p:menuitem value="Visualizar Evento(s)"
+				url="visualizarEventos.xhtml" icon="fa fa-file" />
+		</p:submenu>
+
+		<p:submenu label="Doações" icon="fa fa-gift">
 			<p:menuitem value="Cadastrar Doação" url="cadastrarDoacao.xhtml"
 				icon="fa fa-plus-square" />
-			<p:menuitem value="Visualizar Doações" url="#"
+			<p:menuitem value="Visualizar Doações" url="visualizarDoacoes.xhtml"
 				icon="fa fa-file" />
 		</p:submenu>
 
