--- a/src/main/webapp/template/Voluntario/header.xhtml
+++ b/src/main/webapp/template/Voluntario/header.xhtml
@@ -6,24 +6,32 @@
 
 <h:form>
 	<h:panelGrid columns="2" cellpadding="1">
-		<p:graphicImage url="/resources/imagens/logoBanner.png" width="80%" height="125" />
+		<p:graphicImage url="/resources/imagens/logoBanner.png" width="80%"
+			height="125" />
 	</h:panelGrid>
+
+	<div align="right">
+		<h:outputText value="Olá #{editarVoluntario.voluntario.nome}!"
+			style="margin-right: 2cm; font-size: 16px; font-weight: bold;" />
+	</div>
+
 
 	<p:menubar style="background :	#D6DDE7;">
 		<p:menuitem value="Home" icon="fa fa-home" url="home.xhtml" />
-		
-		<p:submenu label="Vagas" icon="fa fa-book">
-			<p:menuitem value="Visualizar Vaga(s)" url="visualizarVagas.xhtml" icon="fa fa-file" />
-		</p:submenu>
-		
-		<p:submenu label="Eventos" icon="fa fa-book">
-			<p:menuitem value="Cadastrar Evento" url="cadastrarEvento.xhtml"
-				icon="fa fa-plus-square" />
-			<p:menuitem value="Visualizar Evento(s)" url="visualizarEventos.xhtml"
+
+		<p:submenu label="Vagas" icon="fa fa-handshake-o">
+			<p:menuitem value="Visualizar Vaga(s)" url="visualizarVagas.xhtml"
 				icon="fa fa-file" />
 		</p:submenu>
-		
-		<p:submenu label="Doações" icon="fa fa-book">
+
+		<p:submenu label="Eventos" icon="fa fa-glass">
+			<p:menuitem value="Cadastrar Evento" url="cadastrarEvento.xhtml"
+				icon="fa fa-plus-square" />
+			<p:menuitem value="Visualizar Evento(s)"
+				url="visualizarEventos.xhtml" icon="fa fa-file" />
+		</p:submenu>
+
+		<p:submenu label="Doações" icon="fa fa-gift">
 			<p:menuitem value="Cadastrar Doação" url="cadastrarDoacao.xhtml"
 				icon="fa fa-plus-square" />
 			<p:menuitem value="Visualizar Doações" url="visualizarDoacoes.xhtml"
