--- a/src/main/webapp/template/ONG/header.xhtml
+++ b/src/main/webapp/template/ONG/header.xhtml
@@ -19,22 +19,18 @@
 		<p:menuitem value="Home" icon="fa fa-home" url="home.xhtml" />
 
 		<p:submenu label="Vagas" icon="fa fa-handshake-o">
-			<p:menuitem value="Visualizar Vaga(s)" url="visualizarVagas.xhtml"
-				icon="fa fa-file" />
+			<p:menuitem value="Cadastrar Vaga" url="cadastrarVaga.xhtml" />
+			<p:menuitem value="Visualizar Vaga(s)" url="visualizarVagas.xhtml" />
 		</p:submenu>
 
 		<p:submenu label="Eventos" icon="fa fa-glass">
-			<p:menuitem value="Cadastrar Evento" url="cadastrarEvento.xhtml"
-				icon="fa fa-plus-square" />
+			<p:menuitem value="Cadastrar Evento" url="cadastrarEvento.xhtml" />
 			<p:menuitem value="Visualizar Evento(s)"
-				url="visualizarEventos.xhtml" icon="fa fa-file" />
+				url="visualizarEventos.xhtml" />
 		</p:submenu>
 
 		<p:submenu label="Doações" icon="fa fa-gift">
-			<p:menuitem value="Cadastrar Doação" url="cadastrarDoacao.xhtml"
-				icon="fa fa-plus-square" />
-			<p:menuitem value="Visualizar Doações" url="visualizarDoacoes.xhtml"
-				icon="fa fa-file" />
+			<p:menuitem value="Visualizar Doações" url="visualizarDoacoes.xhtml" />
 		</p:submenu>
 
 		<p:submenu label="Minha Conta" icon="fa fa-user-circle"
