--- a/src/main/webapp/template/Voluntario/header.xhtml
+++ b/src/main/webapp/template/Voluntario/header.xhtml
@@ -12,7 +12,7 @@
 
 	<div align="right">
 		<h:outputText value="Olá #{editarVoluntario.voluntario.nome}!"
-			style="margin-right: 2cm; font-size: 16px; font-weight: bold;" />
+			style="margin-right: 2cm; font-size: 1.05em; font-weight: bold;" />
 	</div>
 
 
