--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -1,5 +1,5 @@
 .ui-widget {  
-    font-size: 14px !important;  
+    font-size: 1.05em !important;  
 } 
  
 .ui-datagrid-no-border .ui-datagrid-content {
