--- a/src/main/webapp/template/ONG/header.xhtml
+++ b/src/main/webapp/template/ONG/header.xhtml
@@ -12,7 +12,7 @@
 	</h:panelGrid>
 	<div align="right">
 		<h:outputText value="Olá #{editarONG.ong.nomeONG}!"
-			style="margin-right: 2cm; font-size: 16px; font-weight: bold;" />
+			style="margin-right: 2cm; font-size: 1.05em; font-weight: bold;" />
 	</div>
 
 	<p:menubar style="background :	#D6DDE7;">
