--- a/src/main/webapp/template/Voluntario/header.xhtml
+++ b/src/main/webapp/template/Voluntario/header.xhtml
@@ -5,6 +5,8 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:form>
+	<p:growl id="growl-mensagem" showDetail="true" sticky="true" />
+
 	<h:panelGrid columns="2" cellpadding="1">
 		<p:graphicImage url="/resources/imagens/logoBanner.png" width="80%"
 			height="125" />
